begin menu section, title (responsive) and menu list (not responsive yet

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ nav {
 
 .home-section .restaurant-name {
     font-weight: lighter;
+    font-family: "Playfair Display";
 }
 
 .links-area {
@@ -117,6 +118,68 @@ nav {
     -webkit-transform: rotate(45deg);
 }
 
+.menu-section {
+    text-align: center;
+    padding: 100px 200px;
+}
+
+.menu-titles span {
+    line-height: 30px;
+    font-size: 90px;
+    letter-spacing: 10px;
+    font-weight: 300;
+    opacity: 0.1;
+    text-transform: uppercase;
+    color: #978970;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    left: 0;
+}
+
+.menu-titles h1 {
+    font-size: 60px;
+    margin-bottom: 150px;
+    text-transform: uppercase;
+}
+
+.menu-items {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    height: 200px;
+}
+
+.menu-items li a {
+    text-decoration: none;
+    line-height: 22px;
+    font-size: 20px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-weight: lighter;
+    color: rgb(226, 226, 226);
+    padding: 60px 80px;
+    box-shadow: 1px 1px 10px #333;
+    background-size: cover;
+    background-position: center;
+}
+
+.menu-items li:nth-child(1) a {
+    background-image: url('./assets/drinks.jpg');
+}
+.menu-items li:nth-child(2) a {
+    background-image: url('./assets/starter.jpg');
+}
+.menu-items li:nth-child(3) a {
+    background-image: url('./assets/lunch.jpg');
+}
+.menu-items li:nth-child(4) a {
+    background-image: url('./assets/dinner.jpg');
+}
+.menu-items li:nth-child(5) a {
+    background-image: url('./assets/dessert.jpg');
+}
+
 
 @media screen and (max-width: 768px) {
     body {
@@ -143,6 +206,28 @@ nav {
 
     .burger {
         display: block;
+    }
+
+    .home-section .text-area {
+        font-size: 2em;
+        letter-spacing: 3px;
+    }
+
+    .link {
+        width: 200px;
+        padding: 20px 20px;
+    }
+
+    .link a {
+        font-size: 15px;
+    }
+
+    .menu-titles span {
+        font-size: 50px;
+    }
+
+    .menu-titles h1 {
+        font-size: 35px;
     }
 }
 
