--- a/style.css
+++ b/style.css
@@ -144,13 +144,20 @@ nav {
 }
 
 .menu-items {
-    display: flex;
-    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     justify-content: space-around;
-    height: 200px;
 }
 
-.menu-items li a {
+.menu-items li {
+    padding: 80px 80px;
+    box-shadow: 1px 1px 10px #333;
+    background-size: cover;
+    background-position: center;
+    list-style-type: none;
+}
+
+.menu-items a {
     text-decoration: none;
     line-height: 22px;
     font-size: 20px;
@@ -158,41 +165,55 @@ nav {
     text-transform: uppercase;
     font-weight: lighter;
     color: rgb(226, 226, 226);
-    padding: 60px 80px;
-    box-shadow: 1px 1px 10px #333;
-    background-size: cover;
-    background-position: center;
 }
 
-.menu-items li:nth-child(1) a {
-    background-image: url('./assets/drinks.jpg');
+.menu-details {
+    margin-top: 20px;
 }
-.menu-items li:nth-child(2) a {
-    background-image: url('./assets/starter.jpg');
+
+.drinks-item {
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('./assets/drinks.jpg');
+    grid-column: 1;
+    grid-row: 1;
 }
-.menu-items li:nth-child(3) a {
-    background-image: url('./assets/lunch.jpg');
+
+.starter-item {
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('./assets/starter.jpg');
+    grid-column: 2;
+    grid-row: 1;
 }
-.menu-items li:nth-child(4) a {
-    background-image: url('./assets/dinner.jpg');
+.lunch-item {
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('./assets/lunch.jpg');
+    grid-column: 3;
+    grid-row: 1;
 }
-.menu-items li:nth-child(5) a {
-    background-image: url('./assets/dessert.jpg');
+.dinner-item {
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('./assets/dinner.jpg');
+    grid-column: 4;
+    grid-row: 1;
+}
+.dessert-item {
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('./assets/dessert.jpg');
+    grid-column: 5;
+    grid-row: 1;
 }
 
 .drinks-menu, .starter-menu, .lunch-menu, .dinner-menu, .dessert-menu {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 20px;
+    margin-bottom: 20px;
 }
 
 .drinks-img, .starter-img, .lunch-img, .dinner-img, .dessert-img {
-    grid-column: 1/2;
+    grid-column: 1;
     grid-row: 1;
 }
 
 .drinks-details, .starter-details, .lunch-details, .dinner-details, .dessert-details {
-    grid-column: 2/2;
+    grid-column: 2/3;
     grid-row: 1;
+    background-color: antiquewhite;
 }
 
 .menu-details img {
