--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ nav {
 .menu-section {
     text-align: center;
     padding: 100px 200px;
+    background-color: rgb(243, 235, 237);
 }
 
 .menu-titles span {
@@ -155,6 +156,14 @@ nav {
     background-size: cover;
     background-position: center;
     list-style-type: none;
+    cursor: pointer;
+}
+
+.menu-items li:hover a, .menu-items-active {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    font-weight: bold;
+    transition: 0.1s ease;
 }
 
 .menu-items a {
@@ -163,12 +172,17 @@ nav {
     font-size: 20px;
     letter-spacing: 4px;
     text-transform: uppercase;
-    font-weight: lighter;
     color: rgb(226, 226, 226);
 }
 
 .menu-details {
     margin-top: 20px;
+}
+
+.menu-details img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .drinks-item {
@@ -203,17 +217,35 @@ nav {
     grid-template-columns: 1fr 2fr;
     grid-gap: 20px;
     margin-bottom: 20px;
+    height: 600px;
+}
+
+.drinks-menu {
+    display: grid;
+}
+.starter-menu {
+    display: none;
+}
+.lunch-menu {
+    display: none;
+}
+.dinner-menu {
+    display: none;
+}
+.dessert-menu {
+    display: none;
 }
 
 .drinks-img, .starter-img, .lunch-img, .dinner-img, .dessert-img {
     grid-column: 1;
-    grid-row: 1;
+    grid-row: 1;  
 }
 
 .drinks-details, .starter-details, .lunch-details, .dinner-details, .dessert-details {
     grid-column: 2/3;
     grid-row: 1;
-    background-color: antiquewhite;
+    background-color: #ffffff;
+    box-shadow: 10px 13px 26.7px 3.3px rgb(0 0 0 / 5%);
 }
 
 .menu-details img {
