--- a/style.css
+++ b/style.css
@@ -212,28 +212,16 @@ nav {
     grid-row: 1;
 }
 
-.drinks-menu, .starter-menu, .lunch-menu, .dinner-menu, .dessert-menu {
-    display: grid;
+#drinks-menu, #starter-menu, #lunch-menu, #dinner-menu, #dessert-menu {
+    display: none;
     grid-template-columns: 1fr 2fr;
     grid-gap: 20px;
     margin-bottom: 20px;
     height: 600px;
 }
 
-.drinks-menu {
+#drinks-menu {
     display: grid;
-}
-.starter-menu {
-    display: none;
-}
-.lunch-menu {
-    display: none;
-}
-.dinner-menu {
-    display: none;
-}
-.dessert-menu {
-    display: none;
 }
 
 .drinks-img, .starter-img, .lunch-img, .dinner-img, .dessert-img {
