--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@ nav {
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-  /*  background-color: #5d4954;*/
     font-family: 'Poppins', sans-serif;
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 99vw;
 }
 
 .logo {
@@ -124,12 +123,12 @@ nav {
     background-color: rgb(243, 235, 237);
 }
 
-.menu-titles span {
+.section-titles span {
     line-height: 30px;
     font-size: 90px;
     letter-spacing: 10px;
     font-weight: 300;
-    opacity: 0.1;
+    opacity: 0.2;
     text-transform: uppercase;
     color: #978970;
     position: absolute;
@@ -138,7 +137,7 @@ nav {
     left: 0;
 }
 
-.menu-titles h1 {
+.section-titles h1 {
     font-size: 60px;
     margin-bottom: 150px;
     text-transform: uppercase;
@@ -157,6 +156,7 @@ nav {
     background-position: center;
     list-style-type: none;
     cursor: pointer;
+    margin: 0 5px;
 }
 
 .menu-items li:hover a, .menu-items-active {
@@ -238,6 +238,16 @@ nav {
 
 .menu-details img {
     max-width:100%;
+}
+
+.testimonial-section {
+    padding: 100px 20px;
+    text-align: center;
+    height: 50vh;
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('./assets/testimonial.jpg');
+    background-size: cover;
+    background-position: center;
+    color: white;
 }
 
 @media screen and (max-width: 768px) {
