--- a/style.css
+++ b/style.css
@@ -409,8 +409,47 @@ nav {
 .contact-section {
     padding: 100px 20px;
     text-align: center;
-    height: 50vh;
+    height: auto;
     background-color: white;
+}
+
+.contact-form {
+    max-width: 600px;
+    margin: auto;
+    padding: 0 10px;
+    overflow: hidden;
+}
+
+.contact-form-text {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 16px 0;
+    border: 0;
+    padding: 20px 40px;
+    outline: none;
+    border: 1px #E4D0D5 solid;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+
+.contact-form-text:focus {
+    box-shadow: 0 0 10px 4px rgb(243, 235, 237);
+}
+
+textarea.contact-form-text {
+    resize: none;
+    height: 120px;
+}
+
+.contact-form-btn {
+    float: right;
+    border: 0;
+    background:rgb(243, 235, 237);
+    padding: 12px 50px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.5s;
 }
 
 @media screen and (max-width: 1200px) {
