--- a/style.css
+++ b/style.css
@@ -452,6 +452,43 @@ textarea.contact-form-text {
     transition: 0.5s;
 }
 
+/*
+    Footer area
+*/
+
+.footer-section {
+    padding: 40px 20px;
+    text-align: center;
+    height: auto;
+    background-color: black;
+    color: white;
+}
+
+.footer-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 40px;
+}
+
+.footer-address {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.footer-contact {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.footer-social-media {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.footer-content h3 {
+    margin-bottom: 20px;
+}
+
 @media screen and (max-width: 1200px) {
     .menu-section {
         padding: 100px 80px;
