--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ nav {
 }
 
 .description-area {
+    margin-top: -80px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: space-around;
@@ -252,6 +253,7 @@ nav {
 }
 
 .menu-items {
+    margin-top: -80px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     justify-content: space-around;
@@ -389,6 +391,7 @@ nav {
 .splide {
     padding: 0 100px;
     margin: auto;
+    margin-top: -80px;
 }
 
 /*
@@ -404,6 +407,7 @@ nav {
 
 .reservation-container {
     margin: 0 200px;
+    margin-top: -80px;
     box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
     background-color: white;
     display: grid;
@@ -512,6 +516,7 @@ nav {
     border: 1px #e4d0d5 solid;
     border-radius: 10px;
     transition: 0.5s;
+    font-size: 18px;
 }
 
 .contact-form-text:focus {
@@ -524,13 +529,17 @@ textarea.contact-form-text {
 }
 
 .contact-form-btn {
-    float: right;
     border: 0;
     background: rgb(243, 235, 237);
     padding: 12px 50px;
     border-radius: 20px;
     cursor: pointer;
     transition: 0.5s;
+    font-size: 18px;
+}
+
+.contact-content {
+    margin-top: -80px;
 }
 
 /*
@@ -644,6 +653,7 @@ textarea.contact-form-text {
 
     .reservation-container {
         margin: 0;
+        margin-top: -80px;
     }
 }
 
