--- a/style.css
+++ b/style.css
@@ -200,6 +200,20 @@ nav {
     justify-content: center;
 }
 
+.authentic-title i {
+    margin-right: 15px;
+}
+
+.fresh-title i {
+    margin-right: 15px;
+}
+
+
+.friendly-title i {
+    margin-right: 15px;
+}
+
+
 .values-item {
     grid-column: 1;
     grid-row: 3;
@@ -637,18 +651,23 @@ textarea.contact-form-text {
         grid-row: 2;
     }
 
-    .description-area {
-        grid-template-columns: repeat(1, 1fr);
+    .description-section {
+        padding: 100px 100px;
     }
 
-    .description-img {
-        grid-column: 1;
-        grid-row: 1;
+    .description-area {
+        display: block;
+    }
+
+    .description-img img {
+        width: 100%;
+        height: 200px;
     }
 
     .description-text {
+        margin: 30px 0;
         grid-column: 1;
-        grid-row: 2;
+        grid-row: 1;
     }
 
     .reservation-container {
