--- a/style.css
+++ b/style.css
@@ -150,11 +150,11 @@ nav {
 
 .description-img img {
     height: 100%;
-    width: 400px;
+    width: 40px;
     object-fit: cover;
 }
 
-.dscription-right-section {
+.description-right-section {
     grid-column: 2;
     grid-row: 1;
     font-size: 20px;
@@ -253,7 +253,7 @@ nav {
     font-weight: 300;
     opacity: 0.2;
     text-transform: uppercase;
-    color: #978970;
+    color: white;
     position: absolute;
     text-align: center;
     width: 100%;
@@ -765,8 +765,155 @@ textarea.contact-form-text {
     }
 }
 
+
+@media only screen and (max-width : 480px) {
+    .home-section .text-area {
+        font-size: 1em;
+    }
+
+    .links-area {
+        display: grid;
+        grid-template-columns: repeat(1, 2fr);
+        grid-gap: 20px;
+        margin-bottom: 40px;
+    }
+
+    .link {
+        margin: auto;        
+        padding: 15px 10px;
+    }
+
+    .link-description {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .link-reservation {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    .home-section .text-area {
+        padding-top: 25vh;
+    }
+
+    .arrow {
+        width: 40px;
+        height: 40px;
+    }
+
+    .nav-section {
+        overflow-x: hidden;
+    }
+
+    .section-titles span {
+        font-size: 30px;
+        margin-top: -10px;
+    }
+
+    .section-titles h1 {
+        font-size: 30px;
+        margin-top: -45px;
+    }
+
+    .description-right-section {
+        font-size: 10px;
+    }
+
+    .value-title-items {
+        margin-bottom: 20px;
+    }
+
+    .menu-section {
+        padding: 100px 10px;
+    }
+
+    .reservation-container {
+        grid-template-columns: repeat(1, 2fr);
+    }
+
+    .reservation-time {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .reservation-form {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    .reservation-time {
+        padding-top: 50px;
+    }
+
+    .reservation-time h2 {
+        font-size: 20px;
+    }
+
+    .reservation-time h3 {
+        font-size: 25px;
+    }
+
+    .reservation-form {
+        padding-top: 0;
+    }
+
+    .form-field input, .form-field select, .contact-form-text {
+        margin: 10px auto;
+        padding-left: 10px;
+        font-size: 14px;
+    }
+
+    .form-field p {
+        margin-left: 20px;
+    }
+
+    .footer-content {
+        grid-template-columns: repeat(1, 2fr);
+        margin-bottom: 20px;
+    }
+
+    .footer-address {
+        grid-column: 1;
+        grid-row: 1;
+        margin-bottom: 15px;
+    }
+
+    .footer-contact {
+        grid-column: 1;
+        grid-row: 2;
+        margin-bottom: 15px;
+    }
+
+    .footer-social-media {
+        grid-column: 1;
+        grid-row: 3;
+        margin-bottom: 15px;
+    }
+
+    .splide {
+        padding: 0;
+    }
+
+    .splide p {
+        font-size: 15px;
+    }
+
+    .splide__arrows {
+        display: none;
+    }
+
+    .splide__pagination {
+        bottom: -20px !important;
+    }
+}
+
 .nav-active {
     transform: translateX(0);
+}
+
+.arrows-hidden {
+    display: none;
 }
 
 @keyframes navLinkFade {
