--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins';
 }
 
 /*
@@ -150,7 +151,7 @@ nav {
 
 .description-img img {
     height: 100%;
-    width: 40px;
+    width: 60%;
     object-fit: cover;
 }
 
